--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <title>Toothy Chic - Best Salon in Thoothukudi | Hair Styling & Beauty Treatments</title>
     
     <!-- Open Graph / Social Media Meta Tags -->
-    <meta property="og:title" content="Toothy Chic - Best Salon in Thoothukudi">
+ 
+    <meta name="google-site-verification" content="w68dINq7BaxvWd9CXZtap1iKJAn-A52p7kq1_aXLf58" />
     <meta name="google-site-verification" content="ZcaiDdo87yan6Xjuk-YiC6F28dLy6_xb0rc-NqTuGOU" />
     <meta property="og:description" content="Premium hair salon in Thoothukudi offering haircuts, styling, coloring, and beauty treatments. Book your appointment today!">
     <meta property="og:type" content="website">
