--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="description" content="Toothy Chic - The best hair salon in Thoothukudi offering premium haircuts, styling, coloring, and spa treatments. Book your appointment today!">
     <meta name="keywords" content="salon Thoothukudi, best salon Thoothukudi, hair salon, beauty salon, haircut, hair styling, hair coloring, spa, facial, beauty treatments Thoothukudi">
     <meta name="author" content="Toothy Chic Salon">
+    <meta name="google-site-verification" content="xxxxxxx">
+
     <title>Toothy Chic - Best Salon in Thoothukudi | Hair Styling & Beauty Treatments</title>
     
     <!-- Open Graph / Social Media Meta Tags -->
