--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Toothy Chic Salon">
     <meta name="google-site-verification" content="xxxxxxx">
 
-    <title>Toothy Chic - Best Salon in Thoothukudi | Hair Styling & Beauty Treatments</title>
+    <title>Toothy Chic - Best Salon in Thoothukudi | Hair Styling & Beauty Treatment</title>
     
     <!-- Open Graph / Social Media Meta Tags -->
  
