--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="o08HfgMzTFF85JhWny4mw_X4AlJesU3K6q3Fzk_6Fao" />
     <meta name="description" content="Toothy Chic - The best hair salon in Thoothukudi offering premium haircuts, styling, coloring, and spa treatments. Book your appointment today!">
     <meta name="keywords" content="salon Thoothukudi, best salon Thoothukudi, hair salon, beauty salon, haircut, hair styling, hair coloring, spa, facial, beauty treatments Thoothukudi">
     <meta name="author" content="Toothy Chic Salon">
